--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .login-card-contaner {
@@ -13,8 +12,8 @@ body {
     height: 280px;
     width: 280px;
     margin-top: 90px;
-    border-radius: 1.1%
-    
+    border-radius: 1.1%;
+   
     
 
 };
@@ -26,6 +25,7 @@ body {
 
     background-color: #ECECEC;
     padding: 10% 20%;
+    align-items: center;
   
 }
 
@@ -35,22 +35,31 @@ input {
     border-color: white;
     border: none;
     padding-top: 20px;
-    margin-top: 30px;
+    margin-top: 0px;
     margin-left: 20%;
-    color: #A9A9A9;
     padding-left: 7px;
     padding-bottom: 4px;
     
     
 }
 
-.login-button {
+#email {
+
+    margin-top: 50px;
+}
+
+#password {
+
+    margin-top: 20px;
+}
+
+#login-button {
 
     background-color: #104D86;
     border: none;
     color: white;
     margin-left: 20%;
-    margin-top: 15%;
+    margin-top: 20px;
     padding: 10px;
     width: 170px;
     text-align: center;
