--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 .login-card-contaner {
 
     background-color: #ECECEC;
-    height: 280px;
-    width: 280px;
+    height: 260px;
+    width: 270px;
     margin-top: 90px;
     border-radius: 1.1%;
    
@@ -24,8 +24,8 @@ body {
 .form-container {
 
     background-color: #ECECEC;
-    padding: 10% 20%;
     align-items: center;
+   
   
 }
 
@@ -34,9 +34,10 @@ input {
     background-color: #ffffff;
     border-color: white;
     border: none;
+    border-radius: 1.1%;
     padding-top: 20px;
     margin-top: 0px;
-    margin-left: 20%;
+    margin-left: 19%;
     padding-left: 7px;
     padding-bottom: 4px;
     
@@ -58,10 +59,10 @@ input {
     background-color: #104D86;
     border: none;
     color: white;
-    margin-left: 20%;
+    margin-left: 19%;
     margin-top: 20px;
     padding: 10px;
-    width: 170px;
+    width: 172px;
     text-align: center;
     
 }
