--- a/styles.css
+++ b/styles.css
@@ -6,27 +6,27 @@ body {
     align-items: center;
 }
 
-.login-card-contaner {
+/*--------- LOGIN STYLES--------- */
+
+.card-contaner {
 
     background-color: #ECECEC;
-    height: 260px;
+    height: 280px;
     width: 270px;
     margin-top: 90px;
     border-radius: 1.1%;
    
-    
-
 };
 
 
 
 
-.form-container {
+.login-form {
 
     background-color: #ECECEC;
     align-items: center;
-   
-  
+    display: none;
+
 }
 
 input {
@@ -39,19 +39,22 @@ input {
     margin-top: 0px;
     margin-left: 19%;
     padding-left: 7px;
-    padding-bottom: 4px;
-    
+    padding-bottom: 4px; 
     
 }
 
 #email {
 
     margin-top: 50px;
+    
+   
 }
 
 #password {
 
     margin-top: 20px;
+    
+  
 }
 
 #login-button {
@@ -59,10 +62,71 @@ input {
     background-color: #104D86;
     border: none;
     color: white;
-    margin-left: 19%;
-    margin-top: 20px;
+    margin-left: 5%;
+    margin-top: 25px;
     padding: 10px;
-    width: 172px;
+    width: 80px;
     text-align: center;
+
     
+}
+
+#password, #email {
+
+    display: none;
+}
+
+#welcome-text {
+
+    color: white;
+}
+
+/*------- SIGN UP -------*/
+
+.Sign-up-form {
+
+
+    background-color: #ECECEC;
+    align-items: center;
+    height: 200px;
+}
+
+#signup-button {
+
+    
+    background-color: #104D86;
+    border: none;
+    color: white;
+    margin-left: 19%;
+    margin-top: 25px;
+    padding: 10px;
+    width: 80px;
+    text-align: center;
+
+}
+
+#name {
+
+    margin-top: 30px;
+    padding: 8px;
+
+}
+
+#lastname {
+
+    margin-top: 10px;
+    padding: 8px;
+}
+
+#SignupPassword {
+
+    margin-left: 19%;
+    padding: 8px;
+}
+
+#SignupEmail {
+
+    padding: 8px;
+    margin: 10px;
+    margin-left: 19%;
 }
