--- a/css/tasks.css
+++ b/css/tasks.css
@@ -10,7 +10,6 @@ h1 {
     font-size: 1.8rem;
 }
 
-/* .task-container, */
  h1 {
  
     display: flex;
@@ -74,11 +73,9 @@ h1 {
 }
 
 .todo-list {
-
-    width: 40%;
-    margin: auto;
-    padding: 2%;
-    margin-top: 8%;
+    display: grid;
+    place-items: center; 
+ 
 }
 
 .todo-item {
@@ -86,6 +83,7 @@ h1 {
     padding: 2%;
     border: none;
     list-style-type: none;
+    
 }
 
 .todo {
@@ -95,8 +93,11 @@ h1 {
     color: black;
     font-size: 1.5rem;
     display: grid;
-    grid-template-columns: 20% 30% 30% 20% 20%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     text-align: center;
+    width: 70%;
+    height: 50%;
+    
 }
 
 /*-- */
@@ -106,6 +107,7 @@ h1 {
     color: white;
     border: none;
     font-size: 1rem;
+    height: 95%;
 } 
 
 .delete-btn {
@@ -203,7 +205,7 @@ h1 {
 
 .due-date {
 
-    padding: 5%;
-    margin: 15%;
+    padding: 20%;
+   
     font-size: 15px;
 }
