--- a/css/login.css
+++ b/css/login.css
@@ -22,11 +22,10 @@ body {
 
     background-color: #ECECEC;
     align-items: center;
-    display: none;
 
 }
 
-/* input {
+input {
 
     background-color: #ffffff;
     border-color: white;
@@ -38,11 +37,20 @@ body {
     padding-left: 7px;
     padding-bottom: 4px; 
     
-} */
+}
 
 #email {
 
     margin-top: 50px;
+    background-color: #ffffff;
+    border-color: white;
+    border: none;
+    border-radius: 1.1%;
+    padding-top: 20px;
+    margin-top: 40px;
+    margin-left: 19%;
+    padding-left: 7px;
+    padding-bottom: 4px; 
     
    
 }
@@ -50,8 +58,16 @@ body {
 #password {
 
     margin-top: 20px;
-    
-  
+    background-color: #ffffff;
+    border-color: white;
+    border: none;
+    border-radius: 1.1%;
+    padding-top: 20px;
+    margin-top: 40px;
+    margin-left: 19%;
+    margin-bottom: 20px;
+    padding-left: 7px;
+    padding-bottom: 4px; 
 }
 
 #login-button {
@@ -115,6 +131,7 @@ body {
 
     margin-left: 19%;
     padding: 8px;
+    display: none;
 }
 
 #SignupEmail {
@@ -122,15 +139,13 @@ body {
     padding: 8px;
     margin: 10px;
     margin-left: 19%;
+    display: none;
 }
-
 
 
 /*-- SIGN UP AND LOGIN PAGE DISPLAY*/
 .signup-page {
-
-   display: none;
-   
+    display: none;
 }
 
 .login-page {
