--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,36 +1,40 @@
 
 .tasks-page{
-    width: 100%;
+    width: min(100%, 950px);
     height: 100vh;
-    background-color: rgb(153, 185, 250);
-    overflow: auto;    
+    background: linear-gradient( to right, #136a8a, #267871);
+    overflow: auto; 
+    display: none;   
 }
 
 h1 {
     font-size: 1.8rem;
-}
-
- h1 {
- 
+    color: aliceblue;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+}
+#task-page-header {
+
+    display: grid;
+    grid-template-columns: 60% 30%;
+    gap: 1%;
+    margin-top: 4%;
+    margin-bottom: 6%;
 }
 
 .task-search {
-
-    padding: 1%;
+    width: 90%;
+    margin: auto;
+    padding: 1.5%;
     font-size: 15px;
     border: none;
     background: white;
-    border-radius: 3%;
-   
 }
 
 .save-button {
 
-    padding: 1%;
+    padding: 1.5%;
     border: none;
     border-radius: 4%;
     width: 70%;
@@ -41,28 +45,9 @@ h1 {
     margin: 0.2%;
     border-radius: 7%; 
     border: none;
-    padding: 2%;
 }
 
-.priority {
-    border-radius: 7%;
-    border: none;
-    padding: ;
-}
-
-.delete-btn {
-
-    background: #47a6ff;
-    color: white;
-    border: none;
-    padding: 0.7%;
-    font-size: 1rem;
-    margin: 0.2%;
-    border-radius: 4%;
-}
-
-
-/*-- tasks--*/
+/*-- everything in each task container--*/
 .status {
     background: #0f900f;
     color: white;
@@ -72,54 +57,59 @@ h1 {
     border-radius: 4%;
 }
 
-.todo-list {
-    display: grid;
-    place-items: center; 
- 
-}
-
-.todo-item {
-
-    padding: 2%;
-    border: none;
-    list-style-type: none;
-    
+.todo-list li { 
+     flex: 1;
 }
 
 .todo {
 
-    margin: 3%;
+    margin: 0.9rem auto;
     background-color: rgb(255, 255, 255);
     color: black;
     font-size: 1.5rem;
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    text-align: center;
-    width: 70%;
-    height: 50%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    width: min(80%, 950px);
+    height: fit-content;
     
 }
-
-/*-- */
 .delete-btn,
 .edit-btn  {
 
     color: white;
     border: none;
     font-size: 1rem;
-    height: 95%;
+    height: auto;
+    width: 15%;
 } 
 
-.delete-btn {
-    
-    background-color: red;
+.due-date {
+    padding: 2%;
+    font-size: 22px;
 }
 
+.task-priority, .due-date {
+    margin-right: 10%;
+}
+
+.task-priority {
+    padding: 2%;
+    text-align: center;
+}
+.delete-btn {
+    background-color: red;
+}
 .edit-btn {
     background: rgb(0, 187, 255);
 }
+.todo-item {
 
-/*-- task form--*/
+    list-style-type: none;
+    padding: 0rem 0.8rem;
+}
+
+/*-- add and edit task form --*/
 .task-form >
 .task-input {
 
@@ -175,20 +165,6 @@ h1 {
     margin: 20% 130%;
 } 
 
-#task-page-header {
-
-    display: grid;
-    grid-template-columns: 60% 30%;
-    gap: 1%;
-    margin-top: 7%;
-   
-}
-.task-search {
-
-    width: 90%;
-    margin: auto;
-}
-
 .task-form {
 
     display: none;
@@ -198,14 +174,4 @@ h1 {
     transform: translate(-50%, -60%);
 }
 
-.taskPage {
 
-   
-}
-
-.due-date {
-
-    padding: 20%;
-   
-    font-size: 15px;
-}
